--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,14 @@ header nav a:hover{
     margin-top: 5px;
 }
 
+.carrousel-receitas .titulo-carousel{
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-left: 5px;
+    font-size: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 .margin {
     padding-bottom: 50px;
     padding-top: 10px;
